Refactor build script and add docs
Refactors code in the build script in order to make the usage of the
`Stream`-API more readable.

Furthermore this commit adds light documentation to various places.